--- a/src/assets/css/mainstyle.css
+++ b/src/assets/css/mainstyle.css
@@ -1,10 +1,6 @@
 .autoWidth{
-	width: 92% !important;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    padding: 0;
-    float: none !important;
+	width: auto !important;
+
 }
 .activeCls{
 	background-color: #269abc;
@@ -16,17 +12,13 @@
     border-radius: 3px;
     border: none;
     position: fixed;
-    width: 298px;
+    width: 280px;
     left: 58px;
-    top: 80px;
+    top: 70px;
     z-index: 11;
     overflow: hidden;
 }
 .bottom-bar {
-    position: absolute;
-    z-index: 10;
-    bottom: 30px;
-    right: 0;
     width: 100%;
 }
 .controllerButton{
@@ -39,13 +31,16 @@
     display: table;
 }
 .prev{float: left;}
-.next{float: right !important;}
-#jcl-demo a.prev, #jcl-demo a.next, #jcl-demo a.go, .jcl-demo a.prev, .jcl-demo a.next{font-size: 28px;padding: 10px;}
+.next{float: left !important;}
+#jcl-demo a.prev, #jcl-demo a.next, #jcl-demo a.go, .jcl-demo a.prev, .jcl-demo a.next{font-size: 28px;padding: 10px;width: 47px;}
 .toggle-editor{display: none;}
-.cntr{}
+#jcl-demo{margin: 0 auto;}
 #jcl-demo .mid{margin: 0;width: 400px;height: 400px;}
 canvas {
     border: 1px solid #999;
 }
+.carousel{    max-width: 90%;padding: 0 !important;
+    margin: 0 auto;
+    float: none;    float: left !important;}
 .canvasHolder{margin: 0 auto;}
 .canvasHolder .canvas-container{position: absolute !important;}
