--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -1,4 +1,4 @@
-<md-toolbar>
+<md-toolbar layout="column">
 	<div layout="row" layout-sm="row" layout-align="center center" layout-wrap="">
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="website(); activecls = 1" ng-class="{activeCls: activecls === 1}"><i class="fa fa-globe">&nbsp;</i>website</md-button>
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="activecls = 2" ng-class="{activeCls: activecls === 2}"><i class="fa fa-envelope">&nbsp;</i>email</md-button>
@@ -9,7 +9,7 @@
 	 </div>
 </md-toolbar>
 
-<div layout="column">
+
 <section layout="row" flex layout-padding>
 	<div class="md-sidenav-left md-whiteframe-z2 properties-panel" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
 		 <md-button class="md-fab md-accent toggle-editor" aria-label="refresh" ng-hide="hide">
@@ -71,7 +71,7 @@
 
 </section>
 <!-- <md-divider md-inset ></md-divider> -->
-<section layout="row" layout-padding class="bottom-bar" md-component-id="center"  layout-fill layout-align="bottom center">
+<section layout="column" layout-padding class="bottom-bar" md-component-id="center"  layout-fill layout-align="bottom center">
 	<div id="jcl-demo">
 		<div class="widget">
 			<!-- <div class="controllerButton" layout-sm="column">
@@ -88,8 +88,6 @@
 		            <li><img src="assets/images/4.jpg"></li>
 		            <li><img src="assets/images/5.jpg"></li>
 		            <li><img src="assets/images/6.jpg"></li>
-	            </ul>
-	            
 		    </div>
 		    <a href="#" class="next" layout-sm="column" flex><i class="fa fa-arrow-circle-o-right"></i></a>
 		 </div>
