--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -11,7 +11,7 @@
 
 
 <section layout="row" flex layout-padding>
-	<div class="md-sidenav-left md-whiteframe-z2 properties-panel" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+	<div class="md-sidenav-left md-whiteframe-z2 properties-panel" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" layout="column">
 		 <md-button class="md-fab md-accent toggle-editor" aria-label="refresh" ng-hide="hide">
 	        <md-tooltip md-direction="left">
 	          Open editor
