--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -1,4 +1,4 @@
-<md-toolbar layout="column" layout-padding>
+<md-toolbar layout="column" layout-padding class="toolbarMng">
 	<div layout="row" layout-sm="row" layout-align="center center" layout-wrap="">
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="website(); activecls = 1" ng-class="{activeCls: activecls === 1}"><i class="fa fa-globe">&nbsp;</i>website</md-button>
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="activecls = 2" ng-class="{activeCls: activecls === 2}"><i class="fa fa-envelope">&nbsp;</i>email</md-button>
