--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -71,25 +71,46 @@
 
 </section>
 <!-- <md-divider md-inset ></md-divider> -->
-<section layout="column" layout-padding class="bottom-bar" md-component-id="center"  layout-fill layout-align="bottom center">
-	<div id="jcl-demo">
-		<div class="widget">
-			<!-- <div class="controllerButton" layout-sm="column">
-				<a href="#" class="prev" layout-sm="column"><i class="fa fa-arrow-circle-o-left"></i> </a>
-				<a href="#" class="next" layout-sm="column"><i class="fa fa-arrow-circle-o-right"></i></a>
-			</div> -->
-			<a href="#" class="prev" layout-sm="column" flex><i class="fa fa-arrow-circle-o-left"></i> </a>
-		    <div class="carousel autoWidth" layout-sm="column" flex>
+<section >
+	<div id="jcl-demo" layout="column" layout-padding class="bottom-bar" sm-component-id="center"  layout-fill layout-align="bottom center">
+		<div class="widget" layout="row">
+			<div layout="column" layout-align="center center" class="sm-padding">
+		   	 <span id="left"><a href="#" class="prev"><i class="fa fa-arrow-circle-o-left"></i> </a></span>
+		  </div>
+			
+		    <div class="carousel" layout="column" layout-align="center start" layout-padding flex>
 		    	
-		        <ul layout-sm="row">
+		        <ul>
 			        <li><img src="assets/images/1.jpg"></li>
 			        <li><img src="assets/images/2.jpg"></li>
 			        <li><img src="assets/images/3.jpg"></li>
 		            <li><img src="assets/images/4.jpg"></li>
 		            <li><img src="assets/images/5.jpg"></li>
 		            <li><img src="assets/images/6.jpg"></li>
+		            <li><img src="assets/images/1.jpg"></li>
+			        <li><img src="assets/images/2.jpg"></li>
+			        <li><img src="assets/images/3.jpg"></li>
+		            <li><img src="assets/images/4.jpg"></li>
+		            <li><img src="assets/images/5.jpg"></li>
+		            <li><img src="assets/images/6.jpg"></li>
+		            <li><img src="assets/images/1.jpg"></li>
+			        <li><img src="assets/images/2.jpg"></li>
+			        <li><img src="assets/images/3.jpg"></li>
+		            <li><img src="assets/images/4.jpg"></li>
+		            <li><img src="assets/images/5.jpg"></li>
+		            <li><img src="assets/images/6.jpg"></li>
+		            <li><img src="assets/images/1.jpg"></li>
+			        <li><img src="assets/images/2.jpg"></li>
+			        <li><img src="assets/images/3.jpg"></li>
+		            <li><img src="assets/images/4.jpg"></li>
+		            <li><img src="assets/images/5.jpg"></li>
+		            <li><img src="assets/images/6.jpg"></li>
+		        </ul>
 		    </div>
-		    <a href="#" class="next" layout-sm="column" flex><i class="fa fa-arrow-circle-o-right"></i></a>
+		    <div layout="column" layout-align="center center" class="sm-padding">
+		    <span id="right"><a href="#" class="next"><i class="fa fa-arrow-circle-o-right"></i></a></span>
+		  </div>
+		    
 		 </div>
 	</div>
 </section>
