--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -1,7 +1,7 @@
 <md-toolbar>
 	<div layout="row" layout-sm="column" layout-align="center center" layout-wrap="">
 	  <md-button class="md-raised md-default" ng-click="website(); activecls = 1" ng-class="{activeCls: activecls === 1}"><i class="fa fa-globe">&nbsp;</i>website</md-button>
-	  <md-button class="md-raised md-default" ng-click="activecls = 2" ng-class="{activeCls: activecls === 2}"><i class="fa fa-envelope">&nbsp;</i>email</md-button>
+	  <md-button class="md-raised md-default" ng-click="email(); activecls = 2" ng-class="{activeCls: activecls === 2}"><i class="fa fa-envelope">&nbsp;</i>email</md-button>
 	  <md-button class="md-raised md-default" ng-click="activecls = 3" ng-class="{activeCls: activecls === 3}"><i class="fa fa-file-text">&nbsp;</i>text</md-button>
 	  <md-button class="md-raised md-default" ng-click="activecls = 4" ng-class="{activeCls: activecls === 4}"><i class="fa fa-link">&nbsp;</i>link</md-button>
 	  <md-button class="md-raised md-default" ng-click="activecls = 5" ng-class="{activeCls: activecls === 5}"><i class="fa fa-film">&nbsp;</i>video</md-button>
@@ -10,67 +10,66 @@
 </md-toolbar>
 
 <div layout="column">
-<section layout="row" flex layout-padding>
-	<div class="md-sidenav-left md-whiteframe-z2 properties-panel" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
-		 <md-button class="md-fab md-accent toggle-editor" aria-label="refresh" ng-hide="hide">
-	        <md-tooltip md-direction="left">
-	          Open editor
-	        </md-tooltip>
-	        <md-icon class="fa fa-pencil" style="width: 24px; height: 24px;">
-	        </md-icon>
-	      </md-button>
+	<section layout="row" flex layout-padding>
+		<div class="md-sidenav-left md-whiteframe-z2 properties-panel" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+			 <md-button class="md-fab md-accent toggle-editor" aria-label="refresh" ng-hide="hide">
+		        <md-tooltip md-direction="left">
+		          Open editor
+		        </md-tooltip>
+		        <md-icon class="fa fa-pencil" style="width: 24px; height: 24px;">
+		        </md-icon>
+		      </md-button>
 
-		<md-toolbar class="properties-header">
-		    <div class="md-toolbar-tools">Regions Editor</div>
-		 </md-toolbar>
-		<md-content>
-			<md-list>
-				<md-input-container class="md-block">
-					<input required name="one" ng-model="region.one">
-					<div ng-messages="region.one.$error">
-						<div ng-message="required">This is required.</div>
+			<md-toolbar class="properties-header">
+			    <div class="md-toolbar-tools">Regions Editor</div>
+			 </md-toolbar>
+			<md-content>
+				<md-list>
+					<md-input-container class="md-block">
+						<input required name="one" ng-model="region.one">
+						<div ng-messages="region.one.$error">
+							<div ng-message="required">This is required.</div>
+						</div>
+					</md-input-container>
+					<md-input-container class="md-block" flex>
+						<input required name="two" ng-model="region.two">
+						<div ng-messages="region.tow.$error">
+							<div ng-message="required">This is required.</div>
+						</div>
+					</md-input-container>
+					<md-input-container class="md-block" flex>
+						<input required name="three" ng-model="region.three">
+						<div ng-messages="region.three.$error">
+							<div ng-message="required">This is required.</div>
+						</div>
+					</md-input-container>
+					<md-input-container class="md-block" flex>
+						<input required name="four" ng-model="region.four">
+						<div ng-messages="region.four.$error">
+							<div ng-message="required">This is required.</div>
+						</div>
+					</md-input-container>
+				</md-list>
+				<div>
+					<md-button class="md-raised md-primary" ng-click="saveRegion()">Savae</md-button>
+					<md-button class="md-raised md-primary" ng-click="cancelReset()">Cancel</md-button>
+				</div>
+			</md-content>
+		</div>
+		<md-content flex layout-padding layout="row" md-component-id="center"  layout-fill layout-align="top center">
+			<div class="canvasHolder">
+			<canvas id="c" width="399" height="419">  </canvas>
+				<div id="jcl-demo" class="cntr canvasonImage">
+					<div class="custom-container widget">
+					    <div class="mid">
+					        <img src="assets/images/1.jpg" alt="1">
+					    </div>
 					</div>
-				</md-input-container>
-				<md-input-container class="md-block" flex>
-					<input required name="two" ng-model="region.two">
-					<div ng-messages="region.tow.$error">
-						<div ng-message="required">This is required.</div>
-					</div>
-				</md-input-container>
-				<md-input-container class="md-block" flex>
-					<input required name="three" ng-model="region.three">
-					<div ng-messages="region.three.$error">
-						<div ng-message="required">This is required.</div>
-					</div>
-				</md-input-container>
-				<md-input-container class="md-block" flex>
-					<input required name="four" ng-model="region.four">
-					<div ng-messages="region.four.$error">
-						<div ng-message="required">This is required.</div>
-					</div>
-				</md-input-container>
-			</md-list>
-			<div>
-				<md-button class="md-raised md-primary" ng-click="saveRegion()">Savae</md-button>
-				<md-button class="md-raised md-primary" ng-click="cancelReset()">Cancel</md-button>
-			</div>
-		</md-content>
-	</div>
-	<md-content flex layout-padding layout="row" md-component-id="center"  layout-fill layout-align="top center">
-		<div class="canvasHolder">
-		<canvas id="c" width="399" height="419">  </canvas>
-			<div id="jcl-demo" class="cntr canvasonImage">
-				<div class="custom-container widget">
-				    <div class="mid">
-				        <img src="assets/images/1.jpg" alt="1">
-				    </div>
 				</div>
 			</div>
-		</div>
-	</md-content>
-
-</section>
-<!-- <md-divider md-inset ></md-divider> -->
+		</md-content>
+	</section>
+</div>
 <section layout="column" class="bottom-bar">
 	<div id="jcl-demo">
 		<div class="widget">
