--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -1,7 +1,7 @@
 <md-toolbar layout="column" layout-padding class="toolbarMng">
 	<div layout="row" layout-sm="row" layout-align="center center" layout-wrap="">
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="website(); activecls = 1" ng-class="{activeCls: activecls === 1}"><i class="fa fa-globe">&nbsp;</i>website</md-button>
-	  <md-button class="md-raised md-default" ng-click="email(); activecls = 2" ng-class="{activeCls: activecls === 2}"><i class="fa fa-envelope">&nbsp;</i>email</md-button>
+	  <md-button layout-sm="column" class="md-raised md-default" ng-click="email(); activecls = 2" ng-class="{activeCls: activecls === 2}"><i class="fa fa-envelope">&nbsp;</i>email</md-button>
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="activecls = 3" ng-class="{activeCls: activecls === 3}"><i class="fa fa-file-text">&nbsp;</i>text</md-button>
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="activecls = 4" ng-class="{activeCls: activecls === 4}"><i class="fa fa-link">&nbsp;</i>link</md-button>
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="activecls = 5" ng-class="{activeCls: activecls === 5}"><i class="fa fa-film">&nbsp;</i>video</md-button>
