bottom slider fixed

--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -68,8 +68,8 @@
 			</div>
 		</md-content>
 	</section>
-	<section>
-		<div id="jcl-demo" layout="column" layout-padding class="bottom-bar" sm-component-id="center"  layout-fill layout-align="bottom center">
+	<section class="bottom-bar">
+		<div id="jcl-demo" layout="column" layout-padding sm-component-id="center"  layout-fill layout-align="bottom center">
 			<div class="widget" layout="row">
 				<div layout="column" layout-align="center center" class="sm-padding">
 			   	 <span id="left"><a href="#" class="prev"><i class="fa fa-arrow-circle-o-left"></i> </a></span>
