--- a/src/assets/css/mainstyle.css
+++ b/src/assets/css/mainstyle.css
@@ -19,7 +19,11 @@
     overflow: hidden;
 }
 .bottom-bar {
-    width: 100%;
+        position: fixed;
+    bottom: 0;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
 }
 .controllerButton{
     position: absolute;
