--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -3,7 +3,7 @@
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="internal(); activecls = 3" ng-class="{activeCls: activecls === 3}"><i class="fa fa-file-text">&nbsp;</i>internal</md-button>
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="website(); activecls = 1" ng-class="{activeCls: activecls === 1}"><i class="fa fa-globe">&nbsp;</i>website</md-button>
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="email(); activecls = 2" ng-class="{activeCls: activecls === 2}"><i class="fa fa-envelope">&nbsp;</i>email</md-button>
-	  <md-button layout-sm="column" class="md-raised md-default" ng-click="phone(); activecls = 4" ng-class="{activeCls: activecls === 4}"><i class="fa fa-link">&nbsp;</i>phone</md-button>
+	  <md-button layout-sm="column" class="md-raised md-default" ng-click="phone(); activecls = 4" ng-class="{activeCls: activecls === 4}"><i class="fa fa-phone">&nbsp;</i>phone</md-button>
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click="video(); activecls = 5" ng-class="{activeCls: activecls === 5}"><i class="fa fa-film">&nbsp;</i>video</md-button>
 	  <md-button layout-sm="column" class="md-raised md-default" ng-click=" iframe();activecls = 6" ng-class="{activeCls: activecls === 6}"><i class="fa fa-image">&nbsp;</i>iframe</md-button>
 	 </div>
@@ -25,7 +25,7 @@
 			<md-content>
 				<md-list>
 					<md-input-container class="md-block">
-						<label>Internal</label>
+						<label>Page number</label>
 						<input required name="one" ng-model="region.one" aria-label="true">
 						<div ng-messages="region.one.$error">
 							<div ng-message="required">This is required.</div>
@@ -75,17 +75,7 @@
 				
 			    <div class="carousel" layout="column" layout-align="center start" layout-padding flex>
 			        <ul>
-				        <li><img src="assets/images/1.jpg"></li>
-				        <li><img src="assets/images/2.jpg"></li>
-				        <li><img src="assets/images/3.jpg"></li>
-			            <li><img src="assets/images/4.jpg"></li>
-			            <li><img src="assets/images/5.jpg"></li>
-			            <li><img src="assets/images/6.jpg"></li>
-			            <li><img src="assets/images/7.jpg"></li>
-				        <li><img src="assets/images/8.jpg"></li>
-				        <li><img src="assets/images/9.jpg"></li>
-			            <li><img src="assets/images/10.jpg"></li>
-			           
+				        <li ng-repeat="imgs in regionsimages"><img ng-src="{{ imgs.img }}"></li>
 			        </ul>
 			    </div>
 			    <div layout="column" layout-align="center center" class="sm-padding">
