--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -48,7 +48,7 @@
 					</md-input-container>
 				</md-list>
 				<div>
-					<md-button class="md-raised md-primary" ng-click="saveRegion()">Savae</md-button>
+					<md-button class="md-raised md-primary" ng-click="saveRegion()">Save</md-button>
 					<md-button class="md-raised md-primary" ng-click="cancelReset()">Cancel</md-button>
 				</div>
 			</md-content>
