--- a/src/app/main/main.temp.html
+++ b/src/app/main/main.temp.html
@@ -33,7 +33,7 @@
 					</md-input-container>
 					<md-input-container class="md-block" ng-if="regiontypeLabel ==='video'">
 						<label>{{ elementlabel }}</label>
-						<textarea ng-model="region.target" md-rows="200" md-maxlength="300" aria-label="true"></textarea>
+						<textarea class="video-textarea" ng-model="region.target" md-rows="200" md-maxlength="600" aria-label="true"></textarea>
 						<div ng-messages="region.one.$error">
 							<div ng-message="required">This is required.</div>
 						</div>
