--- a/src/assets/css/mainstyle.css
+++ b/src/assets/css/mainstyle.css
@@ -52,13 +52,7 @@ canvas {
 .canvasHolder .canvas-container{position: absolute !important;}
 #jcl-demo .custom-container{margin: 0;}
 .toolbarMng button i{padding-top: 9px;}
-textarea{
-    height:auto;
-    width:100%;
-    font-size:16px;
-    background:#fff;
-    border-radius:3px;
-    line-height:0.9em;
-    border:none;
-    padding:10px;
+md-input-container textarea.md-input{
+    min-height: 90px !important;
+    border:1px solid #ddd;
 }
