--- a/src/assets/css/jquery.jcarousellite.css
+++ b/src/assets/css/jquery.jcarousellite.css
@@ -30,7 +30,7 @@
     vertical-align:middle;
 
     /* optional */
-    margin: 10px 10px 10px 0;
+    margin: 10px 5px 10px 2px;
     border-radius: 0px;
 }
 #jcl-demo .carousel>ul>li>p {
