--- a/src/assets/css/mainstyle.css
+++ b/src/assets/css/mainstyle.css
@@ -48,3 +48,9 @@ canvas {border: 1px solid #999;}
 .toolbarMng button i{padding-top: 9px;}
 md-input-container textarea.md-input{ min-height: 90px !important; border:1px solid #ddd;}
 #jcl-demo .carousel{width: 100% !important;}
+md-toast.md-success-toast-theme .md-toast-content{
+    background-color: green;
+}
+md-toast.md-error-toast-theme .md-toast-content{
+    background-color: "#c00";
+}
